# ai-buddy

./: .gitignore  CLAUDE.md  README.md  SPEC.md  TASKS.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: bump-version.mjs
src/: App.tsx  app.css
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: accessibility.rs  capture.m  diarization.rs  download.rs  lib.rs  llm.rs  main.rs  memory.rs  speech_analyzer.swift  speech_assets.rs  transcription.rs
src/components/ChatPanel/: ChatPanel.css  ChatPanel.tsx
src/components/DetailPanel/: DetailPanel.css  DetailPanel.tsx
src/components/Droid/: Droid.css  Droid.tsx  DroidOverlay.css  DroidOverlay.tsx
src/components/TranscriptPanel/: TranscriptPanel.css  TranscriptPanel.tsx
src/lib/: agent.ts  memory.ts
src/onboarding/: AccessibilityPermission.tsx  ModelDownload.tsx  Onboarding.tsx  Ready.tsx  Welcome.tsx  onboarding.css
