[package]
name = "aibuddy"
version = "0.1.0"
description = "AI Buddy — local-first AI assistant"
authors = []
edition = "2021"

[lib]
name = "aibuddy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc          = "1"

[dependencies]
tauri                       = { version = "2", features = ["macos-private-api"] }
tauri-plugin-global-shortcut = "2"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
rusqlite     = { version = "0.32", features = ["bundled"] }
reqwest      = { version = "0.12", features = ["stream", "native-tls"] }
futures-util = "0.3"
tokio        = { version = "1", features = ["fs", "io-util"] }
llama-cpp-2  = "0"
whisper-rs   = "0.13"

# core-foundation is a transitive dep of tauri on macOS, but accessibility.rs
# imports it directly so it must be an explicit dependency.
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
